--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "grunt-contrib-concat": "~0.3.0",
     "grunt-contrib-requirejs": "~0.4.0",
     "grunt-contrib-uglify": "~0.2.1",
+    "grunt-contrib-cssmin": "^3.0.0",
     "grunt": "~0.4.1"
   }
 }
